Create classes Test